# papier_dashboard

./: .gitignore  CLAUDE.md  Dashboard_Models_Spec.MD  README.md  app.py  config.toml  pyproject.toml  start.sh
.streamlit/: config.toml
src/signal_terminal/: config.py  db.py  loader.py  mockdata.py  queries.py  sectors.py  state.py  style.py  universe.py
src/signal_terminal/analytics/: __init__.py  cohorts.py  data.py  descriptions.py  events.py  factors.py  llm_interpret.py
src/signal_terminal/components/: event_flag_row.py  heatmap.py  movers.py  qa_strip.py  styling.py  symbol_drivers_panel.py  theme_pills.py
src/signal_terminal/views/: _analytics_chrome.py  _common.py  cohorts.py  driver_correlation.py  driver_detail.py  events.py  factors.py  pipeline_health.py  pulse.py  sector_lens.py  symbol_detail.py
tests/: conftest.py  test_analytics_cohorts.py  test_analytics_data.py  test_analytics_events.py  test_analytics_factors.py
