[project]
name = "signal-terminal"
version = "0.1.0"
description = "Signal Terminal — read-only Streamlit dashboard over PAPIER's sentiment dataset"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.36",
    "plotly>=5.22",
    "pandas>=2.2",
    "python-dotenv>=1.0",
    "numpy>=1.26",
    "scipy>=1.13",
    "scikit-learn>=1.5",
    "ollama>=0.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/signal_terminal"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
